--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 %% -*- erlang -*-
+{sub_dirs, ["rel"]}.
 {erl_opts, [debug_info]}.
 {deps, [
         {edown, ".*", {git, "git://github.com/esl/edown.git", "HEAD"}},
